<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="50dp" >

    <TextView
        android:id="@+id/saturation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturation" />

    <SeekBar
        android:id="@+id/saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value" />
    
    <SeekBar
       	android:id="@+id/value"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:max="100" 
       	android:progress="50" />

   	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="50dp" >

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.24"
            android:src="@drawable/preview" />

        <Button
            android:id="@+id/render_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="renderPicture"
            android:text="@string/render_picture" />

        <Button
            android:id="@+id/play_game_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="playGame"
            android:text="@string/play_game" />

    </LinearLayout>

</LinearLayout>