<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="50dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="takePicture"
            android:background="@drawable/button_selector"
            android:text="@string/take_picture"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/import_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="importPicture"
            android:background="@drawable/button_selector"
            android:text="@string/import_picture"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="50dp" >

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.37"
            android:src="@drawable/preview" />

        <Button
            android:id="@+id/choose_picture_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="toImageAdjustment"
            android:background="@drawable/button_selector"
            android:text="@string/choose_picture"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>