<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_weight="2" >

        <ImageView
            android:id="@+id/main_menu_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="600dp"
            android:maxWidth="600dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sketch_play_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/start_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:onClick="toImageSelector"
            android:padding="10dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/getting_started_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:onClick="toGettingStarted"
            android:padding="10dp"
            android:text="@string/getting_started" />

        <Button
            android:id="@+id/options_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"

            android:onClick="toOptionsActivity"
            android:padding="10dp"
            android:text="@string/options" />
    </LinearLayout>

</LinearLayout>